[gd_scene load_steps=8 format=2]

[ext_resource path="res://AnimationPlayerLauncher.tscn" type="PackedScene" id=1]
[ext_resource path="res://Launcher.gd" type="Script" id=2]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=3]

[sub_resource type="StreamTexture" id=8]
resource_local_to_scene = true
flags = 4
load_path = "res://.import/enemy2.png-80219ebf59397b88c331e841d69c23d9.stex"

[sub_resource type="CapsuleShape2D" id=9]
radius = 20.9144
height = 22.3063

[sub_resource type="CircleShape2D" id=10]
radius = 318.508

[sub_resource type="CapsuleShape2D" id=11]
radius = 18.4298
height = 18.9713

[node name="Launcher" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
collision_layer = 8
collision/safe_margin = 0.008
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = SubResource( 8 )
vframes = 2
hframes = 8

[node name="HurtBox" type="Area2D" parent="."]
position = Vector2( 2, -10 )
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
visible = false
shape = SubResource( 9 )

[node name="DetectionZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionZone"]
position = Vector2( 0, -0.783958 )
shape = SubResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 2.92552, -10.5885 )
shape = SubResource( 11 )

[node name="AnimationPlayer" parent="." instance=ExtResource( 1 )]

[node name="Missile1" type="Position2D" parent="."]
position = Vector2( -1.88185, -5.79084 )

[node name="Missile2" type="Position2D" parent="."]
position = Vector2( -16.3589, -5.79084 )

[node name="Spark1" type="Position2D" parent="."]
position = Vector2( -17.818, 6.05878 )

[node name="Spark2" type="Position2D" parent="."]
position = Vector2( -34.7451, 5.96835 )

[node name="HitTimer" type="Timer" parent="."]

[node name="Stats" parent="." instance=ExtResource( 3 )]

[node name="DeathTimer" type="Timer" parent="."]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="body_entered" from="DetectionZone" to="." method="_on_DetectionZone_body_entered"]
[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]
[connection signal="zero_health" from="Stats" to="." method="_on_Stats_zero_health"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
